# WMJAimer

./: .gitignore  CMakeLists.txt  LICENSE  ProjectReport.md  README.md  setup
libBase/: CMakeLists.txt  README.md
libBase/include/: common.h
libBase/src/: common.cpp
libControl/: CMakeLists.txt
libControl/Aimer/: Aimer.yaml  CMakeLists.txt  README.md
libControl/Aimer/include/: Aimer.hpp  KinematicModel.hpp  MPC.hpp  ModelObserver.hpp
libControl/Aimer/src/: Aimer.cpp  KinematicModel.cpp  MPC.cpp  ModelObserver.cpp
libControl/Pose/: AngleSolver.yaml  CMakeLists.txt  弹道解算.docx
libControl/Pose/include/: AngleSolver.hpp
libControl/Pose/src/: AngleSolver.cpp
log/: Aimer_Record50.txt  Aimer_Record51.txt  Aimer_Record52.txt  Aimer_Record64.txt  Aimer_Record93.txt  Aimer_Record95.txt  Aimer_Record99.txt
test/: AimerDataTest.cpp  AimerTest.cpp  armor_test.yaml
